@@ -20,7 +20,7 @@ my $build = Test::Run::Builder->new(
     requires => 
     {
         'Moose' => 0,
-        'Test::Run::Core' => "0.0118",
+        'Test::Run::Core' => "0.0120",
         'UNIVERSAL::require' => 0,
         'YAML::XS' => 0,
     },
